# ipp-sharing

./: Cargo.toml  README.md
.cargo/: config.toml
.github/workflows/: main.yml
cli/: Cargo.toml
core/: Cargo.toml
core/src/: handler.rs  ipp_service.rs
core/src/attr/: mod.rs
gui/: Cargo.toml
gui/src/: main.rs
src/: config.rs  dnssd.rs  handler.rs  main.rs  raster.rs
src/attr/: ipp_sys_predefined_map.rs  media.rs
