[package]
authors = ["ArcticLampyrid <ArcticLampyrid@outlook.com>"]
edition = "2021"
name = "ipp-sharing"
version = "0.1.0"

[features]
default = ["pdfium"]
winpdf = []
pdfium = ["winprint/pdfium"]

[patch.crates-io]
bonjour-sys = { path = "../bonjour-sys" }

[dependencies]
anyhow = "1.0"
bimap = "0.6"
clap = { version = "4.5", features = ["derive"] }
futures = "0.3"
gethostname = "0.5"
hyper = "1.5"
ipp = "5.0"
ippper = { path = "../ippper.rs", default-features = false, features = [
    "server",
    "server-tls",
    "rustls-ring",
] }
tokio = { version = "1", features = ["full"] }
tokio-util = { version = "0.7", features = ["io", "compat"] }
uuid = { version = "1.10", features = ["v4", "serde"] }
winprint = { path = "../winprint.rs", default-features = false }
zeroconf = "0.15"
blocking = "1.6"
serde = "1.0"
serde_yml = "0.0.12"
log = "0.4"
flexi_logger = "0.29"
print_raster = "0.1"
tiff = "0.9"
